# personal-spotify

./: Makefile  README.md  config.yaml  poetry.toml  pyproject.toml
notebooks/: spotify_api.ipynb
src/: main.py
src/config/: settings.py
src/processes/: get_raw_data_from_spotify.py  process.py
src/services/: spotify_service.py  test_spotify_service.py
src/storage/: storage.py  test_storage.py
