[project]
name = "de-personal-spotify"
version = "0.1.0"
description = ""
authors = [
    {name = "Christian Lugo Ramírez",email = "chrislugram@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
