[project]
name = "personal-spotify"
version = "0.1.0"
description = ""
authors = [
    {name = "Christian Lugo Ramírez",email = "chrislugram@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spotipy (>=2.25.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "cloudpathlib (>=0.21.0,<0.22.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
